--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -100,15 +100,22 @@ toxicidade e desinformação em todo o ciclo de vida de desenvolvimento dos mode
 %     \includegraphics[width=0.25\textwidth]{contour}
 % \end{wrapfigure}
 
-Considerando questões relativas à proteção da propriedade intelectual, 
-à medida que as técnicas avançam, surgem situações de violação de direitos autorais
-devido os novos conteúdos gerados artificialmente. Um dos desafios nesse aspecto 
-é associar a legislação da propriedade intelectual a qual define de forma clara o que é um trabalho original 
-e quando o direito à propriedade intelectual é violado. Por isso, a definição de propriedade intelectual no âmbito 
-dos modelos de geração de conteúdos por IA ainda permanece obscura e indefinida.
-Alguns exemplos de problemas surgem nos modelos generativos 
-baseados em texto-para-imagem os quais são acusados de infringir os trabalhos de artistas plástico, 
-consequencia do uso de grandes volumes de imagens da internet para o treinamento dos modelos como o Copilot e Stable Diffusion.
+% Considerando questões relativas à proteção da propriedade intelectual, 
+A medida que as técnicas avançam surgem situações de violação de direitos autorais
+com os conteúdos gerados artificialmente. Um dos desafios é associar a legislação da propriedade intelectual, 
+que define de forma clara o que é um trabalho original, 
+a quando o direito à propriedade intelectual é violado. Por isso, a definição de propriedade intelectual no âmbito 
+dos modelos de geração de conteúdos por IA permanece obscura e indefinida.
+Alguns exemplos de problemas surgem em modelos geradores 
+baseados em texto-para-imagem, acusados de infringir os trabalhos de artistas plásticos \textbf{(será que não seria apenas artistas?)}, 
+consequência do uso de grandes volumes de imagens da internet para o treinamento dos modelos como Stable Diffusion.
+% Acho que o Copilot não é treinado em imagens
+
+
+
+
+%%%%%%%%%%%%%%%%
+% Continuar revisando daqui
 
 Algumas estratégias de minimizar a violação da propriedade intelectual permitem que os artistas solicitem a remoção 
 de trabalhos dos datasets que consideram o seu direito violado como a empresa Midjourney. 
