Arrumei aspas da Figura 2

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -90,7 +90,7 @@ toxicidade e desinformação em todo o ciclo de vida de desenvolvimento dos mode
 \begin{wrapfigure}{r}{0.50\textwidth}
   \centering 
   \includegraphics[scale=0.47]{images_generated_with_text_three_engineers.png}
-  \caption{Imagem gerada a partir do texto ``Three engineers running on the grassland``  by Stable Diffusion v2.1.}
+  \caption{Imagem gerada a partir do texto ``Three engineers running on the grassland'' \space  by Stable Diffusion v2.1.}
   \label{fig:images_of_three_engineers}
 \end{wrapfigure}
 
