--- a/Tarefa 01/T1-Latex-Files/main.tex
+++ b/Tarefa 01/T1-Latex-Files/main.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{wrapfig}
+%\usepackage[alf]{abntex2cite}   %estilo de referências
+
 
 \title{Ética \& Inteligência Artificial}
 
