--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -114,16 +114,14 @@ consequência do uso de grandes volumes de imagens da internet para o treinament
 
 
 
-%%%%%%%%%%%%%%%%
-% Continuar revisando daqui
 
-Algumas estratégias de minimizar a violação da propriedade intelectual permitem que os artistas solicitem a remoção 
-de trabalhos dos datasets que consideram o seu direito violado como a empresa Midjourney. 
-Outras companhias como Stability AI planejam permitir que os próprios artistas removam seus trabalhos, 
+Uma estratégia de minimizar a violação da propriedade intelectual é permitir que os artistas que considerarem seus direitos autorais
+violados tenham seus trabalhos removidos dos datasets, como a empresa Midjourney. 
+Outras companhias, como Stability AI, planejam permitir que os próprios artistas removam seus trabalhos, 
 dando mais flexibilidade ao processo de proteção intelectual. 
 Para textos, a marca d'água têm sido utilizada auxiliando na verificação do uso de fontes sem permissão para a geração 
 de conteúdos. A companhia OpenAI trabalha para disponibilizar um classificador que consiga diferenciar entre 
-texto gerado por modelos de IA de textos escritos por pessoas.
+texto gerado por modelos de IA e textos escritos por pessoas.
 
 
 Após breve análise dos principais elementos desejáveis no escopo de GCIA responsáveis, faz-se necessário avaliar  
