--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -119,7 +119,7 @@ Uma estratégia de minimizar a violação da propriedade intelectual é permitir
 violados tenham seus trabalhos removidos dos datasets, como a empresa Midjourney. 
 Outras companhias, como Stability AI, planejam permitir que os próprios artistas removam seus trabalhos, 
 dando mais flexibilidade ao processo de proteção intelectual. 
-Para textos, a marca d'água têm sido utilizada auxiliando na verificação do uso de fontes sem permissão para a geração 
+Para textos a marca d'água têm sido utilizada auxiliando na verificação do uso de fontes sem permissão para a geração 
 de conteúdos. A companhia OpenAI trabalha para disponibilizar um classificador que consiga diferenciar entre 
 texto gerado por modelos de IA e textos escritos por pessoas.
 
@@ -127,12 +127,11 @@ texto gerado por modelos de IA e textos escritos por pessoas.
 Após breve análise dos principais elementos desejáveis no escopo de GCIA responsáveis, faz-se necessário avaliar  
 outras característivas que devem existir nos modelos.
 
-Assim, os conteúdos gerados pelos modelos GCIA podem propagar informação oculta, violenta, danosa e falsa, onde os textos e 
-imagens são difíceis de serem diferenciadas de conteúdos criados por pessoas, e podem ser utilizados para propósitos 
-de publicação de notícias falsas (\textit{fake news}), boatos e até mensagens de assédio. 
-Além disso, o uso para fins comerciais de imagens e textos inseridos 
-em produtos e soluções, a integração dos modelos em software e sistemas, a possibiidade da substituição 
-de determinados trabalhos realizados por pessoas de uma forma descontrolada gera bastante controversia.
+Os conteúdos gerados pelos modelos podem propagar informação oculta, violenta, danosa e falsa, em que os textos e 
+imagens são difíceis de serem diferenciadas de conteúdos criados por pessoas. Assim, podem ser utilizados para publicação de notícias falsas (\textit{fake news}), boatos e até mensagens de assédio. 
+Além disso, o uso para fins comerciais gera bastante controvérsia, passando por imagens e textos inseridos 
+em produtos e soluções à integração dos modelos em software e sistemas. A possibilidade da substituição 
+de determinados trabalhos realizados por pessoas de uma forma descontrolada é desconfortável para muitos.
 
 Os modelos podem ser vistos como caixas-preta tendo uma entrada, o processamento que é oculto aos olhos dos usuários 
 e a saída, o que leva a uma necessidade de se explicar esse resultado a fim de se compreender como e por quê foi criado.
