--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -133,13 +133,13 @@ Além disso, o uso para fins comerciais gera bastante controvérsia, passando po
 em produtos e soluções à integração dos modelos em software e sistemas. A possibilidade da substituição 
 de determinados trabalhos realizados por pessoas de uma forma descontrolada é desconfortável para muitos.
 
-Os modelos podem ser vistos como caixas-preta tendo uma entrada, o processamento que é oculto aos olhos dos usuários 
-e a saída, o que leva a uma necessidade de se explicar esse resultado a fim de se compreender como e por quê foi criado.
-Adicionalmente a disponibilidade de código-fonte aberto desses modelos pode resultar em riscos de se propagar as falhas 
-já mencionadas anteriormente nos novos modelos, produzindo impactos imprevisíveis. 
+Os modelos podem ser vistos como caixas-preta tendo uma entrada, um processamento que é oculto aos olhos dos usuários, 
+e uma saída. Isto leva a uma necessidade de se explicar como e baseado em que o resultado é criado.
+Disponibilizar abertamente o código-fonte desses modelos pode resultar em riscos de se propagar as falhas 
+já mencionadas nos novos modelos, produzindo impactos imprevisíveis. 
 A possibilidade dos usuários fornecerem devolutivas \textit{feedback} sobre o uso dos modelos é algo necessário
 para se ter modelos responsáveis. Como exemplo, a OpenAI possibilita que usuários enviem feedback
-os quais são utilizados para a correção e melhoria reduzindo possíveis impactos negativos.
+que são utilizados para a correção e melhoria, reduzindo possíveis impactos negativos.
 
 Outro ponto relevante é que os modelos são treinados com dados sem o devido consentimento, desrespeitando os direitos
 autorais e sem compensação aos autores pelo uso dos dados. Para evitar esse problema, as companhias passsaram 
