--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -141,12 +141,14 @@ A possibilidade dos usuários fornecerem devolutivas \textit{feedback} sobre o u
 para se ter modelos responsáveis. Como exemplo, a OpenAI possibilita que usuários enviem feedback
 que são utilizados para a correção e melhoria, reduzindo possíveis impactos negativos.
 
-Outro ponto relevante é que os modelos são treinados com dados sem o devido consentimento, desrespeitando os direitos
-autorais e sem compensação aos autores pelo uso dos dados. Para evitar esse problema, as companhias passsaram 
-a agir de forma ativa junto aos proprietários dos dados antes de realizarem o treinamento de seus modelos. 
-Um caminho para contornar essa situação seria as empresas procurarem os autores solicitando autorização 
-para uso dos dados bem como recompensá-los quando os dados forem consultados. Com isso haveria uma justa contrapartida 
-para os autores e o uso responsável dos dados pelos modelos.
+% Parece repetitivo, parece que não acrescenta aos parágrafos anteriores
+% Vamos ler juntos depois
+% Outro ponto relevante é que os modelos são treinados com dados sem o devido consentimento, desrespeitando os direitos
+% autorais e sem compensação aos autores pelo uso dos dados. Para evitar esse problema, as companhias passsaram 
+% a agir de forma ativa junto aos proprietários dos dados antes de realizarem o treinamento de seus modelos. 
+% Um caminho para contornar essa situação seria as empresas procurarem os autores solicitando autorização 
+% para uso dos dados bem como recompensá-los quando os dados forem consultados. Com isso haveria uma justa contrapartida 
+% para os autores e o uso responsável dos dados pelos modelos.
 
 Outros impactos de dimensões menores, contudo não menos importante é o elevado consumo de energia elétrica pelos computadores a fim de treinar os modelos 
 cada vez maiores podendo ter bilhões ou trilhões de parâmetros. Isso leva a uma nova reflexão ainda sem uma solução 
