Final da revisão do paper

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -150,18 +150,20 @@ que são utilizados para a correção e melhoria, reduzindo possíveis impactos 
 % para uso dos dados bem como recompensá-los quando os dados forem consultados. Com isso haveria uma justa contrapartida 
 % para os autores e o uso responsável dos dados pelos modelos.
 
-Outros impactos de dimensões menores, contudo não menos importante é o elevado consumo de energia elétrica pelos computadores a fim de treinar os modelos 
-cada vez maiores podendo ter bilhões ou trilhões de parâmetros. Isso leva a uma nova reflexão ainda sem uma solução 
-concreta. Adicionalmente os modelos deveriam buscar o equilíbrio de benefícios onde determinados grupos de 
+Outro impacto é o elevado consumo de energia elétrica pelos computadores para treinar os modelos 
+cada vez maiores, podendo ter bilhões ou trilhões de parâmetros. Isso leva a uma nova reflexão ainda sem solução. 
+Os modelos deveriam buscar o equilíbrio de benefícios onde determinados grupos de 
 pessoas podem ser privilegiadas em detrimento de outros grupos resultando em desigualdades globais.
 
-Por fim, observa-se nos modelos de GCIA a existencia de conflitos entre seus diversos objetivos, pois ao focar na prevenção 
+
+% Parece estranho, vamos tentar reescrever?
+Por fim, observa-se nos modelos de IA a existência de conflitos entre seus diversos objetivos, pois ao focar na prevenção 
 de determinado risco pode-se criar uma vulnerabilidade em outro tipo de risco. Um exemplo seria quando se busca mitigar 
 o uso de termos tóxicos em modelos de linguagem podem surgir viéses na predição que discrimina outras 
 comunidades.
 
-O artigo finaliza indicando que GCIA ainda está em uma fase embrionária, em crescente e rápida eovlução, 
-com tecnologias impressionantes relacionadas ao campo das artes, mas com vários riscos inerentes ao seu uso. 
-Fornece um resumo dos atuais e potenciais riscos devido ao uso dos modelos possibilitando que as Companhias
-e usuários se previnam, propondo várias ações para minimizar a ocorrência desses riscos.
-Conhecê-los, discutí-los, medí-los e agir é um bom caminho para o futuro dos modelos de GCIA responsáveis.
+O artigo finaliza indicando que GCIA ainda está em uma fase embrionária, em crescente e rápida evolução, 
+com tecnologias impressionantes relacionadas ao campo das artes mas com vários riscos inerentes ao seu uso. 
+Fornece um resumo dos atuais e potenciais riscos do uso de modelos possibilitando que empresas
+e usuários previnam-se, propondo ações para minimizar a ocorrência desses riscos.
+Conhecê-los, discutí-los, medí-los e agir é um bom caminho para o futuro dos modelos responsáveis.
