Adding bonus question

--- a/Tarefa 01/T1-Latex-Files/bonus-chatgpt.tex
+++ b/Tarefa 01/T1-Latex-Files/bonus-chatgpt.tex
@@ -7,7 +7,7 @@
 % \end{enumerate}
 
 Prompt  (questão) enviada ao ChatGPT: 
-\textit{"Comente, em até 500 palavras, a reportage abaixo: Anyone can use this AI art generator — that's the risk."}
+\textit{"Comente, em até 500 palavras, a reportagem abaixo: Anyone can use this AI art generator — that's the risk."}
 
 ~\\ 
 
