Questão bonus e paper

--- a/Tarefa 01/T1-Latex-Files/03-paper.tex
+++ b/Tarefa 01/T1-Latex-Files/03-paper.tex
@@ -168,4 +168,4 @@ O artigo finaliza indicando que GCIA ainda está em uma fase embrionária, em cr
 com tecnologias impressionantes relacionadas ao campo das artes mas com vários riscos inerentes ao seu uso. 
 Fornece um resumo dos atuais e potenciais riscos do uso de modelos possibilitando que empresas
 e usuários previnam-se, propondo ações para minimizar a ocorrência desses riscos.
-Conhecê-los, discutí-los, medí-los e agir é um bom caminho para o futuro dos modelos responsáveis.
+Conhecê-los, discuti-los, medi-los e agir é um bom caminho para o futuro dos modelos responsáveis.
