--- a/Tarefa 01/T1-Latex-Files/main.tex
+++ b/Tarefa 01/T1-Latex-Files/main.tex
@@ -25,7 +25,13 @@
 
 \input{bonus-chatgpt.tex}
 
-\bibliographystyle{unsrt}
-\bibliography{egbib}
+% \bibliographystyle{unsrt}
+% \bibliography{egbib}
+
+\begin{thebibliography}{99}
+    \bibitem{unesco_ethics_ai} United Nations Educational, Scientific and Cultural Organization (UNESCO). Recommendation on the Ethics of Artificial Intelligence, 2022.
+    \bibitem{chen2023pathway} Chen, Chen, Jie Fu, and Lingjuan Lyu. ``A Pathway Towards Responsible AI Generated Content.'' arXiv preprint arXiv:2303.01325 (2023).
+    \bibitem{verge_ai_generator} Vincent, James. ``Anyone can use this AI art generator - that's the risk.'' 15th September 2022. https://www.theverge.com/2022/9/15/23340673/ai-image-generation-stable-diffusion-explained-ethics-copyright-data
+\end{thebibliography}
 
 \end{document}
