--- a/Tarefa 01/T1-Latex-Files/bonus-chatgpt.tex
+++ b/Tarefa 01/T1-Latex-Files/bonus-chatgpt.tex
@@ -9,123 +9,125 @@
 Prompt  (questão) enviada ao ChatGPT: 
 \textit{"Comente, em até 500 palavras, a reportagem abaixo: Anyone can use this AI art generator — that's the risk."}
 
-~\\ 
+% \vspace{0.3cm}
 
-\textbf{Respostas do ChatGPT}
+% \textbf{Primeira consulta}
 
-~\\ 
+% \vspace{0.3cm}
 
-\textbf{1ª consulta - Título da consulta atribuída pelo ChatGPT: \textit{Food allergy inquiry.}}
+% \begin{quote}
+% A reportagem ``Anyone can use this AI art generator — that's the risk'' traz à tona uma questão atual e importante: 
+% a democratização do uso de inteligência artificial para a criação de arte, e os possíveis riscos envolvidos.
 
-~\\ 
+% O artigo destaca que, com o avanço da tecnologia, ferramentas de IA estão se tornando cada vez mais
+% acessíveis para pessoas comuns, permitindo que qualquer um possa criar arte com apenas alguns cliques.
+% Embora isso possa ser visto como algo positivo, especialmente para aqueles que não têm habilidades artísticas,
+% há um risco envolvido nesse processo.
 
-A reportagem "Anyone can use this AI art generator — that's the risk" traz à tona uma questão atual e importante: 
-a democratização do uso de inteligência artificial para a criação de arte, e os possíveis riscos envolvidos.
+% O texto menciona que a facilidade de uso dessas ferramentas pode levar a uma inundação do mercado com 
+% arte de qualidade duvidosa, o que poderia prejudicar a percepção pública sobre a arte em geral. 
+% Além disso, há o risco de que pessoas mal-intencionadas usem essas ferramentas para criar imagens 
+% enganosas ou até mesmo propagandas falsas.
 
-O artigo destaca que, com o avanço da tecnologia, ferramentas de IA estão se tornando cada vez mais
-acessíveis para pessoas comuns, permitindo que qualquer um possa criar arte com apenas alguns cliques.
-Embora isso possa ser visto como algo positivo, especialmente para aqueles que não têm habilidades artísticas,
-há um risco envolvido nesse processo.
+% O artigo também aborda a questão dos direitos autorais, uma vez que muitas dessas ferramentas usam imagens e 
+% dados fornecidos pelos usuários para criar novas obras. Isso pode levar a disputas legais, 
+% especialmente se o usuário não tiver conhecimento ou consentimento sobre o uso de suas imagens.
 
-O texto menciona que a facilidade de uso dessas ferramentas pode levar a uma inundação do mercado com 
-arte de qualidade duvidosa, o que poderia prejudicar a percepção pública sobre a arte em geral. 
-Além disso, há o risco de que pessoas mal-intencionadas usem essas ferramentas para criar imagens 
-enganosas ou até mesmo propagandas falsas.
+% Em suma, a reportagem destaca que embora o uso de IA para criar arte seja uma tendência crescente e interessante, 
+% há um risco associado a essa democratização, especialmente quando se trata de questões éticas e legais. 
+% Portanto, é importante que as pessoas estejam cientes desses riscos e usem essas ferramentas de maneira responsável e informada.
+% \end{quote}
 
-O artigo também aborda a questão dos direitos autorais, uma vez que muitas dessas ferramentas usam imagens e 
-dados fornecidos pelos usuários para criar novas obras. Isso pode levar a disputas legais, 
-especialmente se o usuário não tiver conhecimento ou consentimento sobre o uso de suas imagens.
+% \vspace{0.3cm}
 
-Em suma, a reportagem destaca que embora o uso de IA para criar arte seja uma tendência crescente e interessante, 
-há um risco associado a essa democratização, especialmente quando se trata de questões éticas e legais. 
-Portanto, é importante que as pessoas estejam cientes desses riscos e usem essas ferramentas de maneira responsável e informada.
+% \textbf{Segunda consulta}
 
-~\\ 
+% \vspace{0.3cm}
 
-\textbf{2a. consulta - Título da consulta atribuída pelo ChatGPT: \textit{Food allergy inquiry.}}
+% \begin{quote}
+% A reportagem ``Anyone can use this AI art generator — that's the risk'' aborda a crescente 
+% popularidade das ferramentas de geração de arte baseadas em inteligência artificial e as 
+% preocupações que surgem com o uso dessas ferramentas por qualquer pessoa, incluindo aqueles sem habilidades artísticas.
 
-~\\
+% A matéria começa explicando como essas ferramentas funcionam, usando como exemplo o aplicativo DeepArt.io, 
+% que utiliza redes neurais artificiais para transformar fotografias em obras de arte no estilo de grandes artistas, 
+% como Van Gogh e Picasso. Embora o resultado seja impressionante, a reportagem aponta que a criação de arte através 
+% de algoritmos não é nova e cita exemplos anteriores, como a série ``Neural Art'' de Leon Gatys.
 
-A reportagem "Anyone can use this AI art generator — that's the risk" aborda a crescente 
-popularidade das ferramentas de geração de arte baseadas em inteligência artificial e as 
-preocupações que surgem com o uso dessas ferramentas por qualquer pessoa, incluindo aqueles sem habilidades artísticas.
+% No entanto, a reportagem destaca a facilidade com que essas ferramentas estão disponíveis para qualquer pessoa 
+% com acesso à internet, e a preocupação que isso pode representar para a originalidade e autenticidade da arte. 
+% A reportagem cita um exemplo recente em que uma obra gerada por IA foi vendida em leilão por US\$ 432.500, gerando debates sobre o valor real da arte produzida dessa maneira.
 
-A matéria começa explicando como essas ferramentas funcionam, usando como exemplo o aplicativo DeepArt.io, 
-que utiliza redes neurais artificiais para transformar fotografias em obras de arte no estilo de grandes artistas, 
-como Van Gogh e Picasso. Embora o resultado seja impressionante, a reportagem aponta que a criação de arte através 
-de algoritmos não é nova e cita exemplos anteriores, como a série "Neural Art" de Leon Gatys.
+% Outra preocupação abordada na reportagem é a possibilidade de que essas ferramentas possam ser usadas para 
+% produzir arte falsificada. Como a geração de arte por IA é baseada em algoritmos que podem ser facilmente replicados, 
+% a autenticidade de uma obra pode ser questionada, especialmente se não houver maneira de verificar a fonte original 
+% da imagem usada para gerar a obra.
 
-No entanto, a reportagem destaca a facilidade com que essas ferramentas estão disponíveis para qualquer pessoa 
-com acesso à internet, e a preocupação que isso pode representar para a originalidade e autenticidade da arte. 
-A reportagem cita um exemplo recente em que uma obra gerada por IA foi vendida em leilão por US \$ 432.500, g
-erando debates sobre o valor real da arte produzida dessa maneira.
+% A reportagem também discute as implicações éticas da geração de arte por IA. Como a criação de arte é muitas vezes 
+% vista como uma expressão pessoal e única do artista, o uso de ferramentas de geração de arte pode levantar 
+% questões sobre a autoria e originalidade da obra produzida. Além disso, a reportagem destaca a possibilidade 
+% de que essas ferramentas possam ser usadas para perpetuar preconceitos e estereótipos, como já ocorreu em 
+% casos de algoritmos de reconhecimento facial que foram criticados por reproduzirem discriminação racial.
 
-Outra preocupação abordada na reportagem é a possibilidade de que essas ferramentas possam ser usadas para 
-produzir arte falsificada. Como a geração de arte por IA é baseada em algoritmos que podem ser facilmente replicados, 
-a autenticidade de uma obra pode ser questionada, especialmente se não houver maneira de verificar a fonte original 
-da imagem usada para gerar a obra.
+% Em resumo, a reportagem ``Anyone can use this AI art generator — that’s the risk'' aborda uma questão complexa e
+% multifacetada. Embora as ferramentas de geração de arte por IA ofereçam possibilidades criativas interessantes, 
+% elas também geram preocupações sobre a originalidade, autenticidade e ética da arte produzida. 
+% A reportagem destaca a importância de se refletir sobre essas questões à medida que a tecnologia continua a se 
+% desenvolver e se tornar mais acessível.
+% \end{quote}
 
-A reportagem também discute as implicações éticas da geração de arte por IA. Como a criação de arte é muitas vezes 
-vista como uma expressão pessoal e única do artista, o uso de ferramentas de geração de arte pode levantar 
-questões sobre a autoria e originalidade da obra produzida. Além disso, a reportagem destaca a possibilidade 
-de que essas ferramentas possam ser usadas para perpetuar preconceitos e estereótipos, como já ocorreu em 
-casos de algoritmos de reconhecimento facial que foram criticados por reproduzirem discriminação racial.
+% \vspace{0.3cm}
 
-Em resumo, a reportagem "Anyone can use this AI art generator — that’s the risk" aborda uma questão complexa e
-multifacetada. Embora as ferramentas de geração de arte por IA ofereçam possibilidades criativas interessantes, 
-elas também geram preocupações sobre a originalidade, autenticidade e ética da arte produzida. 
-A reportagem destaca a importância de se refletir sobre essas questões à medida que a tecnologia continua a se 
-desenvolver e se tornar mais acessível.
+% \textbf{Terceira consulta}
 
-~\\ 
+% \vspace{0.3cm}
 
-\textbf{3a. consulta - Título da consulta atribuída pelo ChatGPT: \textit{AI Art Generator Risks.}}
+% \begin{quote}
+% A reportagem em questão trata de um gerador de arte alimentado por inteligência artificial (IA) 
+% que permite a qualquer pessoa criar imagens a partir de algoritmos de aprendizado de máquina. 
+% Embora isso possa parecer empolgante para muitos, a matéria alerta sobre os riscos envolvidos 
+% nesse tipo de tecnologia, que podem ir desde o uso não autorizado de imagens até a disseminação de desinformação.
 
-~\\
+% O uso da IA na arte não é uma novidade. Muitos artistas têm explorado as possibilidades 
+% da tecnologia para criar obras únicas e inovadoras. O que torna o gerador de arte em questão preocupante é o
+% fato de estar disponível para qualquer pessoa sem restrições ou limitações. Isso significa que qualquer um 
+% pode gerar imagens que parecem autênticas, mas que na verdade foram criadas por uma máquina.
 
-A reportagem em questão trata de um gerador de arte alimentado por inteligência artificial (IA) 
-que permite a qualquer pessoa criar imagens a partir de algoritmos de aprendizado de máquina. 
-Embora isso possa parecer empolgante para muitos, a matéria alerta sobre os riscos envolvidos 
-nesse tipo de tecnologia, que podem ir desde o uso não autorizado de imagens até a disseminação de desinformação.
+% Um dos principais riscos é a disseminação de imagens falsas ou enganosas. Com o gerador de arte, 
+% é possível criar imagens realistas que parecem genuínas, mas que na verdade foram criadas por um algoritmo. 
+% Isso pode ser usado para criar notícias falsas, campanhas de desinformação ou até mesmo para difamar pessoas. 
+% Além disso, há o risco de que as imagens geradas sejam usadas sem autorização, violando direitos autorais e de 
+% propriedade intelectual.
 
-O uso da IA na arte não é uma novidade. Muitos artistas têm explorado as possibilidades 
-da tecnologia para criar obras únicas e inovadoras. O que torna o gerador de arte em questão preocupante é o
-fato de estar disponível para qualquer pessoa sem restrições ou limitações. Isso significa que qualquer um 
-pode gerar imagens que parecem autênticas, mas que na verdade foram criadas por uma máquina.
+% Outro problema é a falta de transparência no processo de criação da arte. O gerador de arte não permite
+% que o usuário tenha controle sobre o que está sendo gerado, o que significa que a imagem final pode ter 
+% sido criada com dados de treinamento questionáveis ou enviesados. Isso pode levar a uma série de problemas 
+% éticos e morais, como a perpetuação de estereótipos ou discriminação racial.
 
-Um dos principais riscos é a disseminação de imagens falsas ou enganosas. Com o gerador de arte, 
-é possível criar imagens realistas que parecem genuínas, mas que na verdade foram criadas por um algoritmo. 
-Isso pode ser usado para criar notícias falsas, campanhas de desinformação ou até mesmo para difamar pessoas. 
-Além disso, há o risco de que as imagens geradas sejam usadas sem autorização, violando direitos autorais e de 
-propriedade intelectual.
+% Embora o gerador de arte seja uma ferramenta poderosa e interessante, é importante reconhecer os 
+% riscos envolvidos em seu uso. É necessário que os desenvolvedores dessas tecnologias levem em consideração 
+% a ética e a responsabilidade social ao criar ferramentas que possam ser usadas por qualquer pessoa. 
+% Os usuários também devem estar cientes dos riscos envolvidos e usar a tecnologia de forma responsável e ética.
+% \end{quote}
 
-Outro problema é a falta de transparência no processo de criação da arte. O gerador de arte não permite
-que o usuário tenha controle sobre o que está sendo gerado, o que significa que a imagem final pode ter 
-sido criada com dados de treinamento questionáveis ou enviesados. Isso pode levar a uma série de problemas 
-éticos e morais, como a perpetuação de estereótipos ou discriminação racial.
-
-Embora o gerador de arte seja uma ferramenta poderosa e interessante, é importante reconhecer os 
-riscos envolvidos em seu uso. É necessário que os desenvolvedores dessas tecnologias levem em consideração 
-a ética e a responsabilidade social ao criar ferramentas que possam ser usadas por qualquer pessoa. 
-Os usuários também devem estar cientes dos riscos envolvidos e usar a tecnologia de forma responsável e ética.
-
-~\\ 
+\vspace{0.3cm}
 
 \textbf{Análise das respostas do ChatGPT}
 
-~\\
+\vspace{0.3cm}
 
-% \textcolor{green}{}
-Observa-se que as respostas fornecidas pelo ChatGPT utilizando o mesmo prompt (comando ou questão) em diferentes tempos
-não foram iguais (mesma resposta textual), mas contendo ideias similares entre elas. 
+Efetuamos o prompt ao ChatGPT três vezes sempre com o mesmo comando. Observa-se que as respostas fornecidas pelo ChatGPT não foram idênticas, porém possuem ideias similares entre si. 
 
 As respostas abordaram que o tema é atual 
 e importante devido à democratização do uso da Inteligência Artificial para a criação de arte e destaca os riscos inerentes 
 ao processo de criação e entrega dos conteúdos gerados. Destaca também a facilidade de acesso de qualquer pessoa a essas ferramentas 
-que produz arte de forma muito semelhante ao famosos artistas da humanidade. Enumera riscos como novos conteúdos de arte 
-com qualidade duvidosa, obras, imagens e propagandas falsas, ausencia de autenticidade nas obras, 
-disseminar ideias preconceituosas, discriminação racialm desrespeito a direitos autorais, dentre outros riscos.
+que produz arte de forma muito semelhante a famosos artistas da humanidade. 
 
-Por fim, as respostas indicam que o uso da IA é uma tendência atual e em crescimento, mas destaca os riscos principalmente
-aqueles relacionados ao uso irresponsável e às questões éticas e legais.
+A base de dados do ChatGPT é restrita até setembro de 2021, portanto ele forneceu informações não condizentes com o artigo pedido. Ele introduziu informações de outros artigos da sua base de dados que não pertencem ao artigo requisitado. Por exemplo, ele enumera riscos de novos conteúdos de arte com qualidade duvidosa, cita ausência de autenticidade das obras, e cita uma obra gerada por IA vendida por centenas de milhares de dólares, dentre outras informações. Não testamos a versão paga utilizando GPT-4.
+
+% Enumera riscos como novos conteúdos de arte 
+% com qualidade duvidosa, obras, imagens e propagandas falsas, ausência de autenticidade nas obras, 
+% disseminar ideias preconceituosas, discriminação racial desrespeito a direitos autorais, dentre outros riscos.
+
+As respostas indicam que o uso da IA é uma tendência e está em crescimento mas destacam os riscos, principalmente relacionados ao uso irresponsável e às questões éticas e legais.
  
