Updating final document.

--- a/Tarefa 01/T1-Latex-Files/01-definicao.tex
+++ b/Tarefa 01/T1-Latex-Files/01-definicao.tex
@@ -2,7 +2,7 @@
     \item \textbf{Defina Ética em Inteligência Artificial. }
 \end{enumerate}
 
-A ética em Inteligência Artificial (IA) representa um conjunto de valores e princípios 
-que devem ser respeitados por todos os atores envolvidos no ciclo de vida de sistemas de IA 
-com destaque ao respeito, proteção e promoção dos direitos humanos, liberdades fundamentais e 
-dignidade humana, diversidade e inclusão \cite{unesco_ethics_ai}.
+A ética em Inteligência Artificial (IA) representa um conjunto de valores e princípios que devem ser respeitados por todos os atores envolvidos no ciclo de vida de sistemas de IA com destaque ao respeito, proteção e promoção dos direitos humanos, liberdades fundamentais e dignidade humana, diversidade e inclusão \cite{unesco_ethics_ai}.
+
+Ética em Inteligência Artificial (IA) é um conjunto de valores fundamentais que devem ser respeitados por todas as pessoas envolvidas no desenvolvimento e utilização de sistemas de inteligencia artificial. Alguns desses valores são o respeito às pessoas, a justiça e beneficência. 
+
